# sim2real-inference_code_ros2-bridge

./: README_bridge.md
install/: local_setup.sh  setup.sh
install/hightorque_rl_inference_ros2/include/hightorque_rl_inference_ros2/: hightorque_rl_inference_ros2.hpp
install/hightorque_rl_inference_ros2/share/hightorque_rl_inference_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hightorque_rl_inference_ros2/share/hightorque_rl_inference_ros2/cmake/: hightorque_rl_inference_ros2Config.cmake
install/hightorque_rl_inference_ros2/share/hightorque_rl_inference_ros2/config/: config_example.yaml
install/hightorque_rl_inference_ros2/share/hightorque_rl_inference_ros2/launch/: hightorque_rl_inference.launch.py
log/: latest_build
src/hightorque_rl_inference_ros2/: CMakeLists.txt
src/hightorque_rl_inference_ros2/config/: config_example.yaml
src/hightorque_rl_inference_ros2/include/hightorque_rl_inference_ros2/: hightorque_rl_inference_ros2.hpp
src/hightorque_rl_inference_ros2/scripts/: launch_amp_20dof.sh  verify_topics.sh
src/hightorque_rl_inference_ros2/src/: hightorque_rl_inference_ros2.cpp  main.cpp
